--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
             crossorigin="anonymous"
         />
-        <title>Document | Kakao Clone</title>
+        <title>Chat | Kakao Clone</title>
     </head>
 
     <body>
@@ -26,5 +26,21 @@
                 <span class="status-bar__battery-level">100%</span>
             </div>
         </div>
+        <header class="header">
+            <div class="header__header-column">
+                <h1 class="header__title">Chat</h1>
+            </div>
+            <div class="header__header-column">
+                <span class="header-icon">
+                    <i class="fas fa-search"></i>
+                </span>
+                <span class="header-icon">
+                    <i class="far fa-comment"></i>
+                </span>
+                <span class="header-icon">
+                    <i class="fas fa-cog"></i>
+                </span>
+            </div>
+        </header>
     </body>
 </html>
