--- a/find.html
+++ b/find.html
@@ -10,7 +10,7 @@
             integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
             crossorigin="anonymous"
         />
-        <title>Chat | Kakao Clone</title>
+        <title>Find | Kakao Clone</title>
     </head>
 
     <body>
@@ -28,7 +28,7 @@
         </div>
         <header class="header">
             <div class="header__header-column">
-                <h1 class="header__title">Chat</h1>
+                <h1 class="header__title">Find</h1>
             </div>
             <div class="header__header-column">
                 <span class="header-icon">
