--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <i class="fas fa-clock"></i>
                 <i class="fas fa-volume-mute"></i>
                 <i class="fas fa-wifi"></i>
-                <i class="fas-fa-battery-full"></i>
+                <i class="fas fa-battery-full"></i>
                 <span class="status-bar__battery-level">100%</span>
             </div>
         </div>
@@ -42,6 +42,27 @@
                 </span>
             </div>
         </header>
+        <main class="chats">
+            <ul class="chats__list">
+                <li class="chats__chat chat">
+                    <div class="chat__column">
+                        <img
+                            class="chat__avatar"
+                            src="https://avatars1.githubusercontent.com/u/13897753?v=4"
+                        />
+                        <div class="chat__content">
+                            <span class="chat__username">
+                                kneeprayer
+                            </span>
+                            <span class="chat__preview">Going home!</span>
+                        </div>
+                    </div>
+                    <div class="chat__column">
+                        <span class="chat__timestamp">Yesterday</span>
+                    </div>
+                </li>
+            </ul>
+        </main>
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__list-item">
