--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <li class="chats__chat chat">
                     <div class="chat__column">
                         <img
-                            class="chat__avatar"
+                            class="chat__avatar g-avatar"
                             src="https://avatars1.githubusercontent.com/u/13897753?v=4"
                         />
                         <div class="chat__content">
