--- a/more.html
+++ b/more.html
@@ -38,7 +38,9 @@
                     <i class="fas fa-qrcode"></i>
                 </span>
                 <span class="header-icon">
-                    <i class="fas fa-cog"></i>
+                    <a href="settings.html">
+                        <i class="fas fa-cog"></i>
+                    </a>
                 </span>
             </div>
         </header>
