--- a/index.html
+++ b/index.html
@@ -47,20 +47,24 @@
             <ul class="chats__list">
                 <li class="chats__chat chat">
                     <a href="chat.html">
-                        <div class="chat__column">
-                            <img
-                                class="chat__avatar g-avatar"
-                                src="https://avatars1.githubusercontent.com/u/13897753?v=4"
-                            />
-                            <div class="chat__content">
-                                <span class="chat__username">
-                                    kneeprayer
-                                </span>
-                                <span class="chat__preview">Going home!</span>
+                        <div class="chats__chat friend friend--lg">
+                            <div class="chat__column">
+                                <img
+                                    class="chat__avatar g-avatar"
+                                    src="https://avatars1.githubusercontent.com/u/13897753?v=4"
+                                />
+                                <div class="chat__content">
+                                    <span class="chat__username">
+                                        kneeprayer
+                                    </span>
+                                    <span class="chat__preview"
+                                        >Going home!</span
+                                    >
+                                </div>
                             </div>
-                        </div>
-                        <div class="chat__column">
-                            <span class="chat__timestamp">Yesterday</span>
+                            <div class="chat__column">
+                                <span class="chat__timestamp">Yesterday</span>
+                            </div>
                         </div>
                     </a>
                 </li>
