#2.7 Friend Component part Two

--- a/find.html
+++ b/find.html
@@ -85,7 +85,7 @@
                     <div class="friend__column">
                         <img
                             src="https://avatars1.githubusercontent.com/u/13897753?v=4"
-                            class="g-avatar friend__avatar"
+                            class="friend__avatar"
                         />
                         <div class="friend__content">
                             <span class="friend__name">
