--- a/friends.html
+++ b/friends.html
@@ -63,10 +63,7 @@
                 <h5 class="friends__title">Plus friend</h5>
                 <div class="friends__friend friend">
                     <div class="friend__column">
-                        <img
-                            src="images/avatar.jpg"
-                            class="g-avatar friend__avatar"
-                        />
+                        <img src="images/avatar.jpg" class="friend__avatar" />
                         <div class="friend__content">
                             <span class="friend__name">
                                 Plus Friend
@@ -81,7 +78,7 @@
                     <div class="friend__column">
                         <img
                             src="https://avatars1.githubusercontent.com/u/13897753?v=4"
-                            class="g-avatar friend__avatar"
+                            class="friend__avatar"
                         />
                         <div class="friend__content">
                             <span class="friend__name">
