--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <div class="chats__chat friend friend--lg">
                             <div class="chat__column">
                                 <img
-                                    class="chat__avatar g-avatar"
+                                    class="chat__avatar m-avatar"
                                     src="https://avatars1.githubusercontent.com/u/13897753?v=4"
                                 />
                                 <div class="chat__content">
