--- a/chat.html
+++ b/chat.html
@@ -48,8 +48,8 @@
                 <span class="chat__timestamp">Friday, January 11, 2019</span>
                 <li class="incoming-message message">
                     <img
-                        src="images/avatar.jpg"
-                        class="g-avatar message__avatar"
+                        src="https://avatars1.githubusercontent.com/u/13897753?v=4"
+                        class="m-avatar message__avatar"
                     />
                     <div class="message__content">
                         <span class="message__author">Best Friend</span>
