--- a/friends.html
+++ b/friends.html
@@ -74,7 +74,7 @@
             </div>
             <ul class="friends__list">
                 <h5 class="friends__title">Friends 14</h5>
-                <li class="friends__friend friend friend--lg">
+                <li class="friends__friend friend">
                     <div class="friend__column">
                         <img
                             src="https://avatars1.githubusercontent.com/u/13897753?v=4"
@@ -94,7 +94,6 @@
                             <span>
                                 Yep
                             </span>
-                            <i class="fas fa-play"></i>
                         </div>
                     </div>
                 </li>
