--- a/chat.html
+++ b/chat.html
@@ -52,9 +52,9 @@
                         class="m-avatar message__avatar"
                     />
                     <div class="message__content">
-                        <div class="message__bubble">
+                        <span class="message__bubble">
                             Congrats I love you!
-                        </div>
+                        </span>
                         <span class="message__author">Best Friend</span>
                     </div>
                     <span class="message__timestamp"></span>
@@ -62,9 +62,28 @@
                 <li class="sent-message message">
                     <span class="message__timestamp"></span>
                     <div class="message__content">
-                        <div class="message__bubble">
+                        <span class="message__bubble">
                             Thank you see you soon!
-                        </div>
+                        </span>
+                    </div>
+                </li>
+                <li class="incoming-message message">
+                    <img
+                        src="images/avatar.jpg"
+                        class="m-avatar message__avatar"
+                    />
+                    <div class="message__content">
+                        <span class="message__bubble">
+                            Congrats I love you!
+                        </span>
+                        <span class="message__author">Best Friend</span>
+                    </div>
+                </li>
+                <li class="sent-message message">
+                    <div class="message__content">
+                        <span class="message__bubble">
+                            Thank you see you soon!
+                        </span>
                     </div>
                 </li>
             </ul>
