add webpack-dev-server + gp-pages, bugfix

--- a/src/chat.html
+++ b/src/chat.html
@@ -71,7 +71,7 @@
                 </li>
                 <li class="incoming-message message">
                     <img
-                        src="images/avatar.jpg"
+                        src="https://avatars1.githubusercontent.com/u/13897753?v=4"
                         class="m-avatar message__avatar"
                     />
                     <div class="message__content">
