--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="css/styles.css" />
-        <title>Chat | Kakao Clone</title>
+        <title>Chats | Kakao Clone</title>
     </head>
 
     <body>
@@ -23,13 +23,13 @@
                 <i class="fas fa-clock"></i>
                 <i class="fas fa-volume-mute"></i>
                 <i class="fas fa-wifi"></i>
-                <i class="fas fa-battery-full"></i>
                 <span class="status-bar__battery-level">100%</span>
+                <i class="fas fa-battery-full"></i>
             </div>
         </div>
         <header class="header">
             <div class="header__header-column">
-                <h1 class="header__title">Chat</h1>
+                <h1 class="header__title">Chats</h1>
             </div>
             <div class="header__header-column">
                 <span class="header-icon">
@@ -50,20 +50,20 @@
                         <div class="chats__chat friend friend--lg">
                             <div class="chat__column">
                                 <img
-                                    class="chat__avatar m-avatar"
+                                    class="m-avatar friend__avatar"
                                     src="https://avatars1.githubusercontent.com/u/13897753?v=4"
                                 />
                                 <div class="chat__content">
-                                    <span class="chat__username">
+                                    <span class="friend__name">
                                         kneeprayer
                                     </span>
-                                    <span class="chat__preview"
+                                    <span class="friend__bottom-text"
                                         >Going home!</span
                                     >
                                 </div>
                             </div>
                             <div class="chat__column">
-                                <span class="chat__timestamp">Yesterday</span>
+                                <span class="chat__timestamp">March 8</span>
                             </div>
                         </div>
                     </a>
